--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -1,4 +1,4 @@
-#This file was created by <karsten> Wed May 19 19:14:36 1999
+#This file was created by <karsten> Fri May 21 13:04:47 1999
 #LyX 1.0 (C) 1995-1999 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass book
@@ -3514,7 +3514,9 @@ make
 make install
 \family default 
 .
- wxGTK requires libgtk 1.0.x, it does not work with gtk-1.1/1.2 (yet).
+ wxGTK requires libgtk+, either version 1.0.x or 1.2.x.
+ However, gtk+ version 1.2.x is highly recommended as it works significantly
+ better.
  If you have both gtk 1.0 and 1.2 installed in separate locations, you can
  use the 
 \family typewriter 
