--- a/TODO
+++ b/TODO
@@ -97,6 +97,9 @@ GENERAL ROADMAP/ORDER OF THINGS:
 *** KB:
 *********************************************************************
 
+- move setting of -fPIC to configure
+- suppress many new mail dialogs while one is being displayed
+  (caused by asynchronous event processing)
 - check handling of missing hostnames,
   suppress missing hostname c-client error message
 - test if root test works.
